# misc-test

./: CMakeLists.txt  README.md
scripts/: README.md  build.sh  run.sh
test/: bindChildTasksUsingPstree.cpp  childProcessInfo.cpp  childThreadInfo.cpp  staticClassFree.cpp
test-python/: muiltiprocessingAffnity.py
